--- a/styles.css
+++ b/styles.css
@@ -174,7 +174,7 @@
 }
 
 #card23,#card24,#card25{
-    height: 1000px;
+    height: 1200px;
 }
     
     
@@ -376,21 +376,29 @@ box-sizing: border-box;
 
 }
 #card11,#card12,#card13{
-    height: 400px;
+    height: 600px;
 }
 #card17,#card18,#card19{
-    height: 800px;
+    height: 1000px;
 }
 #card63,#card64,#card65{
-    height: 1400px;
+    height: 1600px;
 }#card60,#card61,#card62{
-    height: 1200px;
+    height: 1400px;
 }
 #card831,#card832,#card833{
-    height: 300px;
+    height: 500px;
 }
 
-    
+*{
+overflow-x:hidden ;/*Hide horizontal scroll bar*/
+margin-right:0 ;
+margin-left: 0;
+min-height: 100vh;
+display: flex;
+flex-direction: column;
+
+}    
 
 #button4{
     color:rgb(209, 20, 190);
@@ -399,4 +407,8 @@ box-sizing: border-box;
 
 #card20,#card21,#card22{
     height: 600px;
+}
+#card1000,#card1001,#card1002,#card1003,#card1004{
+   margin-top:auto ;
+   margin-bottom: 0;
 }
