--- a/styles.css
+++ b/styles.css
@@ -389,7 +389,10 @@ box-sizing: border-box;
 #card831,#card832,#card833{
     height: 300px;
 }
-
+#card1000,#card1001,#card1002,#card1003,#card1004{
+   margin-top:auto ;
+   margin-bottom: 0;
+}
 
 
  
